#*******************************************************************************
# *******************************************************************************
# Copyright (c) 2024 Malte Grave
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0.
#
# SPDX-License-Identifier: EPL-2.0
# 
# Contributors:
#     Malte Grave
# *******************************************************************************/
# *******************************************************************************/

add_subdirectory("msg/Ros2Primitives")
add_subdirectory("msg/Ros2PrimitiveDatentypen")
add_subdirectory("msg/Ros2Arrayspezifikationen")
add_subdirectory("msg/Ros2Arrayspezifikationen2")
add_subdirectory("msg/Ros2PrimitiverDatentyp")
add_subdirectory("msg/Ros2Referenzen")
add_subdirectory("msg/Ros2DynamischesArray1")
add_subdirectory("msg/Ros2DynamischesArray2")
add_subdirectory("msg/Iec61499Bitstrings")